# codenames_llm

./: .gitignore  AGENTS.md  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
src/codenames_llm/: __init__.py  __main__.py  api.py  cli.py  game.py  session.py  terminal.py  views.py
src/codenames_llm/controllers/: __init__.py  openai_controller.py
tests/: test_api.py  test_cli.py  test_engine.py  test_game.py  test_session.py
