[project]
name = "codenames-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "openai>=1.0.0",
    "pytest>=9.0.2",
    "uvicorn>=0.35.0",
]

[project.scripts]
codenames-llm = "codenames_llm.__main__:cli"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.6",
]

[tool.setuptools.package-data]
codenames_llm = ["data/*.txt"]
